--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,11 +22,11 @@ dependencies = [
 ]
 
 [project.scripts]
-sec-analyzer = "frb_sec_analyzer.cli:main"
+sec-analyzer = "sec_analyzer.cli:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/frb_sec_analyzer"]
+packages = ["src/sec_analyzer"]
